--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,9 @@
 
 <todos></todos>
 
-		<script src="vendor/angular.min.js" type="text/javascript"></script>
-		<script src="scripts/app.js" type="text/javascript"></script>
-		<script src="scripts/controllers/main.js" type="text/javascript"></script>
-		<script src="scripts/services/data.js" type="text/javascript"></script>
-		<script src="scripts/directives/todos.js" type="text/javascript"></script>
+		<script src="scripts/vendor.bundle.js" type="text/javascript"></script>
+		<script src="scripts/todo.bundle.js" type="text/javascript"></script>
+		
 		
 </body>
 </html>
